[project]
name = "sentinel"
version = "0.1.0"
description = "Agnet Logging System"
authors = [
    {name = "Roflaff",email = "kimsp0317@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prometheus-client (>=0.22.1,<0.23.0)",
    "docker (>=7.1.0,<8.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
